crates/sui/tests/snapshots/shell_tests__dont_repin__repin.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/dont_repin/repin.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# This should fail - the manifest has a broken dep, and although the lockfile
# has it pinned to the correct location, we've edited the manifest so it should cause repinning
echo 'another_dep = { local = "another_dep" }' >> Move.toml
sui move --client.config $CONFIG build

----- results -----
success: false
exit_code: 1
----- stdout -----
Error while loading dependency broken_dep_path: Failed to load dependency `{ local = "broken_dep_path" }`: Invalid directory at `broken_dep_path`

----- stderr -----
[NOTE] Updating dependencies for `testnet` environment because "./Move.toml" has been changed since the last update.
